# bustout-detection

./: README.md  pyproject.toml  run_demo.py  run_model.py
data/: README.md
scripts/: make_figures.py  run_investigation.py
sql/: investigation.sql
src/bustout/: features.py  investigation.py  metrics.py  model.py  panel_data.py  scoring.py
tests/: test_bustout.py
